// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<HomeGrid /> Should render all in 2 columns 1`] = `
<div>
  <div
    class="guided-answer__home-grid"
  >
    <div
      class="guided-answer__home-grid__column"
    >
      <div>
        <h3
          class="guided-answer__home-grid__section__title"
        >
          <i
            aria-hidden="true"
            class="ts-icon root-162"
            data-icon-name="StarActive"
          />
          <span>
            Bookmarks
          </span>
        </h3>
        <div
          class="ms-FocusZone css-166"
          data-focuszone-id="FocusZone6"
        >
          <ul
            class="guided-answer__home-grid__section__list"
          >
            <li
              class="guided-answer__bookmark"
            >
              <div
                class="guided-answer__bookmark__title"
              >
                <a
                  id="goto-bookmark-button"
                  tabindex="0"
                >
                  Bookmark 1 Title
                </a>
                <button
                  class="ms-Button ms-Button--icon root-167"
                  data-is-focusable="true"
                  id="toggle-bookmark-button"
                  tabindex="-1"
                  type="button"
                >
                  <span
                    class="ms-Button-flexContainer flexContainer-168"
                    data-automationid="splitbuttonprimary"
                  >
                    <i
                      aria-hidden="true"
                      class="ms-Icon root-162 ms-Button-icon icon-170"
                      data-icon-name="StarActive"
                    />
                  </span>
                </button>
              </div>
              <div
                class="bottom-section"
                id="bottom-section"
              >
                <div
                  class="component-and-product-container"
                  style="margin-top: 0px;"
                >
                  <div
                    class="guided-answer__tree__product"
                    id="product-container"
                  >
                    <span
                      class="bottom-title"
                    >
                      Product: 
                    </span>
                    Product 1
                  </div>
                  <div
                    class="guided-answer__tree__component"
                    id="component-container"
                  >
                    <span
                      class="bottom-title"
                    >
                      Component: 
                    </span>
                    Component 1
                  </div>
                </div>
              </div>
            </li>
          </ul>
        </div>
      </div>
    </div>
    <div
      class="guided-answer__home-grid__column"
    >
      <div>
        <h3
          class="guided-answer__home-grid__section__title"
        >
          <i
            aria-hidden="true"
            class="ts-icon root-162"
            data-icon-name="History"
          />
          <span>
            Last visited
          </span>
        </h3>
        <div
          class="ms-FocusZone css-166"
          data-focuszone-id="FocusZone10"
        >
          <ul
            class="guided-answer__home-grid__section__list"
          >
            <li
              class="guided-answer__last-visited"
            >
              <a
                id="last-visited-link"
                tabindex="0"
              >
                Bookmark 1 Title
              </a>
              <div
                class="bottom-section"
                id="bottom-section"
              >
                <div
                  class="component-and-product-container"
                  style="margin-top: 0px;"
                >
                  <div
                    class="guided-answer__tree__product"
                    id="product-container"
                  >
                    <span
                      class="bottom-title"
                    >
                      Product: 
                    </span>
                    Product 1
                  </div>
                  <div
                    class="guided-answer__tree__component"
                    id="component-container"
                  >
                    <span
                      class="bottom-title"
                    >
                      Component: 
                    </span>
                    Component 1
                  </div>
                </div>
              </div>
            </li>
          </ul>
        </div>
      </div>
      <div>
        <h3
          class="guided-answer__home-grid__section__title"
        >
          <i
            aria-hidden="true"
            class="ts-icon root-162"
            data-icon-name="Filter"
          />
          <span>
            Quick Filters
          </span>
        </h3>
        <div
          class="ms-FocusZone css-166"
          data-focuszone-id="FocusZone11"
        >
          <ul
            class="guided-answer__home-grid__section__list"
          >
            <li
              class="guided-answer__quick-filter"
            >
              <button
                tabindex="0"
              >
                <div>
                  Product: 
                  <strong>
                    product 1
                  </strong>
                </div>
                <div>
                  Component: 
                  <strong>
                    component 1
                  </strong>
                </div>
              </button>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<HomeGrid /> Should render only Bookmarks 1`] = `
<div>
  <div
    class="guided-answer__home-grid"
  >
    <div
      class="guided-answer__home-grid__column"
    >
      <div>
        <h3
          class="guided-answer__home-grid__section__title"
        >
          <i
            aria-hidden="true"
            class="ts-icon root-162"
            data-icon-name="StarActive"
          />
          <span>
            Bookmarks
          </span>
        </h3>
        <div
          class="ms-FocusZone css-166"
          data-focuszone-id="FocusZone0"
        >
          <ul
            class="guided-answer__home-grid__section__list"
          >
            <li
              class="guided-answer__bookmark"
            >
              <div
                class="guided-answer__bookmark__title"
              >
                <a
                  id="goto-bookmark-button"
                  tabindex="0"
                >
                  Bookmark 1 Title
                </a>
                <button
                  class="ms-Button ms-Button--icon root-167"
                  data-is-focusable="true"
                  id="toggle-bookmark-button"
                  tabindex="-1"
                  type="button"
                >
                  <span
                    class="ms-Button-flexContainer flexContainer-168"
                    data-automationid="splitbuttonprimary"
                  >
                    <i
                      aria-hidden="true"
                      class="ms-Icon root-162 ms-Button-icon icon-170"
                      data-icon-name="StarActive"
                    />
                  </span>
                </button>
              </div>
              <div
                class="bottom-section"
                id="bottom-section"
              >
                <div
                  class="component-and-product-container"
                  style="margin-top: 0px;"
                >
                  <div
                    class="guided-answer__tree__product"
                    id="product-container"
                  >
                    <span
                      class="bottom-title"
                    >
                      Product: 
                    </span>
                    Product 1
                  </div>
                  <div
                    class="guided-answer__tree__component"
                    id="component-container"
                  >
                    <span
                      class="bottom-title"
                    >
                      Component: 
                    </span>
                    Component 1
                  </div>
                </div>
              </div>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<HomeGrid /> Should render only Bookmarks, no beta features 1`] = `
<div>
  <div
    class="guided-answer__home-grid"
  >
    <div
      class="guided-answer__home-grid__column"
    >
      <div>
        <h3
          class="guided-answer__home-grid__section__title"
        >
          <i
            aria-hidden="true"
            class="ts-icon root-162"
            data-icon-name="StarActive"
          />
          <span>
            Bookmarks
          </span>
        </h3>
        <div
          class="ms-FocusZone css-166"
          data-focuszone-id="FocusZone12"
        >
          <ul
            class="guided-answer__home-grid__section__list"
          >
            <li
              class="guided-answer__bookmark"
            >
              <div
                class="guided-answer__bookmark__title"
              >
                <a
                  id="goto-bookmark-button"
                  tabindex="0"
                >
                  Bookmark 1 Title
                </a>
                <button
                  class="ms-Button ms-Button--icon root-167"
                  data-is-focusable="true"
                  id="toggle-bookmark-button"
                  tabindex="-1"
                  type="button"
                >
                  <span
                    class="ms-Button-flexContainer flexContainer-168"
                    data-automationid="splitbuttonprimary"
                  >
                    <i
                      aria-hidden="true"
                      class="ms-Icon root-162 ms-Button-icon icon-170"
                      data-icon-name="StarActive"
                    />
                  </span>
                </button>
              </div>
              <div
                class="bottom-section"
                id="bottom-section"
              >
                <div
                  class="component-and-product-container"
                  style="margin-top: 0px;"
                >
                  <div
                    class="guided-answer__tree__product"
                    id="product-container"
                  >
                    <span
                      class="bottom-title"
                    >
                      Product: 
                    </span>
                    Product 1
                  </div>
                  <div
                    class="guided-answer__tree__component"
                    id="component-container"
                  >
                    <span
                      class="bottom-title"
                    >
                      Component: 
                    </span>
                    Component 1
                  </div>
                </div>
              </div>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<HomeGrid /> Should render only LastVisited 1`] = `
<div>
  <div
    class="guided-answer__home-grid"
  >
    <div
      class="guided-answer__home-grid__column"
    >
      <div>
        <h3
          class="guided-answer__home-grid__section__title"
        >
          <i
            aria-hidden="true"
            class="ts-icon root-162"
            data-icon-name="History"
          />
          <span>
            Last visited
          </span>
        </h3>
        <div
          class="ms-FocusZone css-166"
          data-focuszone-id="FocusZone4"
        >
          <ul
            class="guided-answer__home-grid__section__list"
          >
            <li
              class="guided-answer__last-visited"
            >
              <a
                id="last-visited-link"
                tabindex="0"
              >
                Bookmark 1 Title
              </a>
              <div
                class="bottom-section"
                id="bottom-section"
              >
                <div
                  class="component-and-product-container"
                  style="margin-top: 0px;"
                >
                  <div
                    class="guided-answer__tree__product"
                    id="product-container"
                  >
                    <span
                      class="bottom-title"
                    >
                      Product: 
                    </span>
                    Product 1
                  </div>
                  <div
                    class="guided-answer__tree__component"
                    id="component-container"
                  >
                    <span
                      class="bottom-title"
                    >
                      Component: 
                    </span>
                    Component 1
                  </div>
                </div>
              </div>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<HomeGrid /> Should render only LastVisited, no beta features 1`] = `
<div>
  <div
    class="guided-answer__home-grid"
  >
    <div
      class="guided-answer__home-grid__column"
    >
      <div>
        <h3
          class="guided-answer__home-grid__section__title"
        >
          <i
            aria-hidden="true"
            class="ts-icon root-162"
            data-icon-name="History"
          />
          <span>
            Last visited
          </span>
        </h3>
        <div
          class="ms-FocusZone css-166"
          data-focuszone-id="FocusZone16"
        >
          <ul
            class="guided-answer__home-grid__section__list"
          >
            <li
              class="guided-answer__last-visited"
            >
              <a
                id="last-visited-link"
                tabindex="0"
              >
                Bookmark 1 Title
              </a>
              <div
                class="bottom-section"
                id="bottom-section"
              >
                <div
                  class="component-and-product-container"
                  style="margin-top: 0px;"
                >
                  <div
                    class="guided-answer__tree__product"
                    id="product-container"
                  >
                    <span
                      class="bottom-title"
                    >
                      Product: 
                    </span>
                    Product 1
                  </div>
                  <div
                    class="guided-answer__tree__component"
                    id="component-container"
                  >
                    <span
                      class="bottom-title"
                    >
                      Component: 
                    </span>
                    Component 1
                  </div>
                </div>
              </div>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<HomeGrid /> Should render only QuickFilters 1`] = `
<div>
  <div
    class="guided-answer__home-grid"
  >
    <div
      class="guided-answer__home-grid__column"
    >
      <div>
        <h3
          class="guided-answer__home-grid__section__title"
        >
          <i
            aria-hidden="true"
            class="ts-icon root-162"
            data-icon-name="Filter"
          />
          <span>
            Quick Filters
          </span>
        </h3>
        <div
          class="ms-FocusZone css-166"
          data-focuszone-id="FocusZone5"
        >
          <ul
            class="guided-answer__home-grid__section__list"
          >
            <li
              class="guided-answer__quick-filter"
            >
              <button
                tabindex="0"
              >
                <div>
                  Product: 
                  <strong>
                    product 1
                  </strong>
                </div>
                <div>
                  Component: 
                  <strong>
                    component 1
                  </strong>
                </div>
              </button>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;
